--- a/styles/Tabs.module.css
+++ b/styles/Tabs.module.css
@@ -1,5 +1,4 @@
 .tabs {
-  /* border: 1px solid #262A53; */
   border-radius: 0.25em;
   max-width: 40em;
   margin: auto;
@@ -7,7 +6,6 @@
 
 .tabs ul {
   display: flex;
-  /* border-bottom: 1px solid #262A53; */
   margin: 0;
   padding: 0;
 }
@@ -16,6 +14,7 @@
   list-style: none;
   padding: 0.5em 1em;
   width: 50%;
+  min-height: 48px;
   border-top-left-radius: 0.25em;
   border-top-right-radius: 0.25em;
   border: 1px solid #262A53;
@@ -26,23 +25,11 @@
   background: transparent;
   border: none;
   cursor: pointer;
+  font-size: 1em;
+  padding: 0.5em;
 }
 
 .current_tab {
   background-color: #FFF !important;
   border-bottom: #FFF !important;
-}
-
-.tabs p {
-  padding: 0;
-  margin: 0;
-  min-height: 8em;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-bottom-right-radius: 0.25em;
-  border-bottom-left-radius: 0.25em;
-  border-bottom: 1px solid #262A53;
-  border-right: 1px solid #262A53;
-  border-left: 1px solid #262A53;
 }
