--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,3 +15,18 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.tab {
+  padding: 0;
+  margin: 0;
+  min-height: 8em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-bottom-right-radius: 0.25em;
+  border-bottom-left-radius: 0.25em;
+  border-bottom: 1px solid #262A53;
+  border-right: 1px solid #262A53;
+  border-left: 1px solid #262A53;
+}
