--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,23 @@
+/* FONT */
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@700&family=Roboto&display=swap');
+
+/* COLORS */
+:root {
+  --background-light: #fef4f3;
+  --background-dark: #ffe3e3;
+  --color-dark: #2F2C23;
+  --color-light: #685152;
+  --white: #ffffff;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
+  font-family: 'Roboto', sans-serif !important;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  color: #262A53;
+  color: var(--color-dark);
 }
 
 a {
@@ -14,6 +27,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+h1 {
+  font-family: 'Dosis', sans-serif;
 }
 
 .tab {
@@ -26,7 +43,52 @@ a {
   justify-content: center;
   border-bottom-right-radius: 0.25em;
   border-bottom-left-radius: 0.25em;
-  border-bottom: 1px solid #262A53;
-  border-right: 1px solid #262A53;
-  border-left: 1px solid #262A53;
+  border-bottom: 1px solid var(--color-dark);
+  border-right: 1px solid var(--color-dark);
+  border-left: 1px solid var(--color-dark);
+  background-color: var(--background-light);
+}
+
+.tab button {
+  margin: 1.5em 1em;
+  padding: 0.8em 1.8em;
+  font-size: 1em;
+  background-color: var(--background-dark);
+  border: 1px solid var(--color-dark);
+  border-radius: 0.25em;
+  min-height: 48px;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+  cursor: pointer;
+}
+
+@media (max-width: 400px) {
+  .form_control {
+    display: flex;
+    flex-direction: column;
+  }
+  .form_control label {
+    padding-bottom: 0.5em;
+  }
+}
+
+.form_control {
+  margin: 1.5em 0.5em 0;
+  width: 20em;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+
+.form_control label {
+  text-align: left;
+}
+
+.form_control input {
+  font-family: 'Dosis', sans-serif;
+  font-size: 1em;
+  padding: 0 0.25em 0 0.5em;
+  border: 1px solid var(--color-dark);
+  min-height: 48px;
+  border-radius: 0.25em;
+  color: var(--color-light);
 }
