--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,6 +101,7 @@ h1 {
   padding: 0 0.25em 0 0.5em;
   border: 1px solid var(--color-dark);
   min-height: 48px;
+  width: 12em;
   border-radius: 0.25em;
   color: var(--color-light);
 }
